# Sumedha-Matrix

./: LICENCE.txt  README.md  pyproject.toml  setup.py
Matrix_Sumedha.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sumedha_matrix/: matrix.py
