[project]
name = "sumedha-matrix"
version = "1.0.0"
authors = [
  { name="Sumedha ", email="umedhaghosh83@gmail.com" },
]
description = "A simple package which performs matrix operations like addition of two matrices,their difference, transpose and much more"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sumedha830/Sumedha-Matrix"
"Bug Tracker" = "https://github.com/sumedha830/Sumedha-Matrix/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"